Add new directive to show table data in d3 charts

--- a/src/directives/templates/styles/mms-main.scss
+++ b/src/directives/templates/styles/mms-main.scss
@@ -32,3 +32,4 @@
 @import "components/_mms-redactor.scss";
 @import "components/_mms-tinymce.scss";
 @import "components/_mms-misc-components.scss";
+@import "components/_mms-d3-chart.scss";
